# micro-videos-python12-test

./: .pylintrc  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
envs/: .env.e2e.example  .env.example  .env.test.example
src/core/: pytest_plugin.py
src/core/cast_member/application/: use_cases.py
src/core/cast_member/domain/: entities.py  entities_fake_builder.py  repositories.py
src/core/cast_member/infra/: container.py  repositories.py
src/core/category/application/: use_cases.py
src/core/category/domain/: entities.py  entities_fake_builder.py  pydantic.py  repositories.py
src/core/category/infra/: container.py  repositories.py
src/core/genre/domain/: entities.py  entities_fake_builder.py  repositories.py
src/core/shared/application/: use_cases.py
src/core/shared/domain/: entities.py  exceptions.py  notification.py  pydantic.py  repositories.py  (+2 more)
src/core/tests/: xpto_test.py
src/django_app/: asgi.py  config.py  settings.py  urls.py  wsgi.py
src/django_app/cast_member_app/: api.py  apps.py  models.py  presenters.py  urls.py
src/django_app/category_app/: api.py  apps.py  models.py  presenters.py  serializers.py  urls.py
src/django_app/genre_app/: apps.py  models.py
src/django_app/ioc_app/: apps.py  containers.py
src/django_app/settings/: __init__.py  rest_framework.py  settings.py
src/django_app/shared/: helpers.py
src/django_app/shared_app/: apps.py  exception_handler.py  middlewares.py  presenters.py
src/django_app/tests/: test_config.py
tests/: xpto_test.py
(+55 files in other folders)
