[project]
name = "micro-admin-videos"
version = "0.1.0"
description = ""
authors = [
    {name = "Luiz Carlos", email = "argentinaluiz@gmail.com"},
]
dependencies = [
    "pydantic>=2.4.2",
    "django>=4.2.6",
    "djangorestframework>=3.14.0",
    "dependency-injector>=4.41.0",
    "dj-database-url>=2.1.0",
    "pydantic-settings>=2.0.3",
    "mysqlclient>=2.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "autopep8>=2.0.4",
    "pylint>=3.0.1",
    "pytest-django>=4.5.2",
    "Faker>=19.6.2",
    "colorama>=0.4.6",
]
